# AmbientTomo

./: .gitignore  BUILD.bazel  README.md  Some awesome Simulations.ipynb  Wave Correlation.ipynb  Wave Propagation Basics.ipynb  requirements.txt  sim1.py  sim2.py  simulation.py  wavelib.py  wellen_simulation.py
examples/: _INFO_.md
rust-src/: Cargo.toml
rust-src/src/: cpml.rs  main.rs  params.rs  render.rs  ricker.rs  simulation.rs
